--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@vercel/speed-insights": "^1.0.11",
     "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "sass": "^1.77.3"
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
