--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^14.2.4",
     "@vercel/speed-insights": "^1.0.11",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
